--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,12 @@
-
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/app.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Time Logger</title>
-    <script type="module" src="/main.js" defer></script>
+    <script type="module" src="js/main.js" defer></script>
   </head>
 
   <body>
